--- a/stadium/book_stadium/templates/book_stadium/base.html
+++ b/stadium/book_stadium/templates/book_stadium/base.html
@@ -2,21 +2,25 @@
 
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- CSS only -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
-    <!-- JavaScript Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="{% static 'css/style.css' %}">
+    <!-- Font Awesome -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" rel="stylesheet" />
+    <!-- Google Fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
+    <!-- MDB -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.3.0/mdb.min.css" rel="stylesheet" />
+    <link rel="stylesheet" href="{% static 'css/base.css' %}">
     <title>Document</title>
 </head>
+
 <body>
     <div class="container">
         <header>
-            <nav>
+            <nav class="navbar">
                 <img class='logo' src="https://varunit.com/wp-content/uploads/2018/09/varunit-logo-square-black-bg.png" alt="">
                 <ul>
                     <li>
@@ -26,13 +30,99 @@
                         <a href="#">Tìm sân</a>
                     </li>
                     <li>
-                        <a href="#">Đăng nhập</a>
+                        <button type="button" class="btn btn-primary" onclick="turnOnModalLogin()">
+                            Đăng nhập
+                        </button>
                     </li>
                 </ul>
             </nav>
         </header>
     </div>
-    
+
+    <div class="modal fade" id="login" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <p style="font-size: 20px;" class="modal-title">Đăng nhập</p>
+                    <button type="button" class="btn-close" data-mdb-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <form>
+                        <!-- Email input -->
+                        <div class="mb-3">
+                            <label class="form-label" for="email">Số điện thoại hoặc email</label>
+                            <input type="email" id="email" class="form-control" />
+                        </div>
+                        <!-- Password input -->
+                        <div class="mb-4">
+                            <label class="form-label" for="password">Mật khẩu</label>
+                            <input type="password" id="password" class="form-control" />
+                        </div>
+                        <!-- Submit button -->
+                        <button type="submit" class="btn btn-primary btn-block mb-4">Đăng nhập</button>
+                        <!-- Register buttons -->
+                        <div class="text-center">
+                            <p>Hoặc đăng nhập với:</p>
+                            <button type="button" class="btn btn-primary btn-floating mx-1">
+                            <i class="fab fa-facebook-f"></i>
+                            </button>
+                            <button type="button" class="btn btn-primary btn-floating mx-1">
+                            <i class="fab fa-google"></i>
+                          </button>
+                            <button type="button" class="btn btn-primary btn-floating mx-1">
+                            <i class="fab fa-twitter"></i>
+                          </button>
+                            <button type="button" class="btn btn-primary btn-floating mx-1">
+                            <i class="fab fa-github"></i>
+                          </button>
+                        </div>
+                    </form>
+                    <br>
+                    <div class="footerLoginForm">
+                        <a href="#">Quên mật khẩu</a>
+                        <a href="#" onclick="turnOnModalRegister()">Tạo tài khoản mới</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="modal fade" id="register" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <p style="font-size: 20px;" class="modal-title">Đăng kí</p>
+                    <button type="button" class="btn-close" data-mdb-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <form id="register">
+                        <div class="mb-4">
+                            <label for="role" class="form-label select-label">Bạn là: </label>
+                            <select name="role" id="role" form="register" class="form-select">
+                                <option value="OWNER">Người đặt</option>
+                                <option value="PLAYER">Chủ sân</option>
+                            </select>
+                        </div>
+                        <!-- Email input -->
+                        <div class="mb-4">
+                            <label class="form-label" for="email">Số điện thoại hoặc Email</label>
+                            <input type="email" id="email" class="form-control" />
+                        </div>
+                        <!-- Password input -->
+                        <div class="mb-4">
+                            <label class="form-label" for="password">Mật khẩu</label>
+                            <input type="password" id="password" class="form-control " />
+                        </div>
+                        <!-- Submit button -->
+                        <button type="submit" class="btn btn-primary btn-block mb-4">Đăng kí</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.3.0/mdb.min.js "></script>
+    <script src="{% static 'js/base.js' %}" type="text/javascript"></script>
     {%block content%} {% endblock %}
 </body>
+
 </html>
