--- a/stadium/book_stadium/templates/book_stadium/base.html
+++ b/stadium/book_stadium/templates/book_stadium/base.html
@@ -11,8 +11,8 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" rel="stylesheet" />
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
-    <!-- MDB -->
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.3.0/mdb.min.css" rel="stylesheet" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="{% static 'css/base.css' %}">
     <title>Document</title>
 </head>
@@ -22,107 +22,131 @@
         <header>
             <nav class="navbar">
                 <img class='logo' src="https://varunit.com/wp-content/uploads/2018/09/varunit-logo-square-black-bg.png" alt="">
-                <ul>
-                    <li>
-                        <a href="#">Đạt sân ngay</a>
-                    </li>
-                    <li>
-                        <a href="#">Tìm sân</a>
-                    </li>
-                    <li>
-                        <button type="button" class="btn btn-primary" onclick="turnOnModalLogin()">
-                            Đăng nhập
-                        </button>
-                    </li>
-                </ul>
+                <div class="menu">
+                    <a href="#">Đạt sân ngay</a>
+                    <a href="#">Tìm sân</a>
+                    {% if user.is_authenticated %}
+                        <a href="">{{user.username}}</a>
+                        <a href="{% url 'logout' %}">Đăng xuất</a>
+                    {% else %}
+                        <button type="button" class="btn btn-primary" onclick="turnOnModalLogin()" >Đăng nhập</button>
+                    {% endif %}
+                </div>
             </nav>
         </header>
+        <section>
+            <div id="mySidenav" class="sidenav">
+                <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+                <a href="#">About</a>
+                <a href="#">Services</a>
+                <a href="#">Clients</a>
+                <a href="#">Contact</a>
+              </div>
+              <span style="font-size:25px;cursor:pointer" onclick="openNav()">&#9776</span>
+              {%block content%} 
+              {% endblock %}
+        </section>
     </div>
 
-    <div class="modal fade" id="login" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <p style="font-size: 20px;" class="modal-title">Đăng nhập</p>
-                    <button type="button" class="btn-close" data-mdb-dismiss="modal" aria-label="Close"></button>
-                </div>
-                <div class="modal-body">
-                    <form>
-                        <!-- Email input -->
-                        <div class="mb-3">
-                            <label class="form-label" for="email">Số điện thoại hoặc email</label>
-                            <input type="email" id="email" class="form-control" />
-                        </div>
-                        <!-- Password input -->
-                        <div class="mb-4">
-                            <label class="form-label" for="password">Mật khẩu</label>
-                            <input type="password" id="password" class="form-control" />
-                        </div>
-                        <!-- Submit button -->
-                        <button type="submit" class="btn btn-primary btn-block mb-4">Đăng nhập</button>
-                        <!-- Register buttons -->
-                        <div class="text-center">
-                            <p>Hoặc đăng nhập với:</p>
-                            <button type="button" class="btn btn-primary btn-floating mx-1">
-                            <i class="fab fa-facebook-f"></i>
-                            </button>
-                            <button type="button" class="btn btn-primary btn-floating mx-1">
-                            <i class="fab fa-google"></i>
-                          </button>
-                            <button type="button" class="btn btn-primary btn-floating mx-1">
-                            <i class="fab fa-twitter"></i>
-                          </button>
-                            <button type="button" class="btn btn-primary btn-floating mx-1">
-                            <i class="fab fa-github"></i>
-                          </button>
-                        </div>
-                    </form>
-                    <br>
-                    <div class="footerLoginForm">
-                        <a href="#">Quên mật khẩu</a>
-                        <a href="#" onclick="turnOnModalRegister()">Tạo tài khoản mới</a>
-                    </div>
-                </div>
+    <div class="modal fade " id="login" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="staticBackdropLabel">Đăng nhập</h5>
+              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
+            <div class="modal-body">
+              <form action="{% url 'login' %}" method="POST">
+                  {% csrf_token %}
+                  <div class="inputs">
+                    <div class="mb-3">
+                        <label for="exampleInputEmail1" class="form-label">Email hoặc số điện thoại</label>
+                        <input type="email" class="form-control" name="email" aria-describedby="emailHelp">
+                        <div id="emailHelp" class="form-text">ĐM các bạn</div>
+                      </div>
+                      <div class="mb-3">
+                        <label for="exampleInputPassword1" class="form-label">Mật khẩu</label>
+                        <input type="password" name="password" class="form-control" id="exampleInputPassword1">
+                      </div>
+                  </div>
+                  <button type="submit" class="btn btn-primary">Đăng nhập</button>
+                  <p>Hoặc đăng nhập với: </p>
+                  <div class="social-login">
+                        <a href="#">
+                            <i class="fa fa-facebook-official fa-2x" aria-hidden="true"></i>
+                        </a>
+                        <a href="">
+                            <i class="fa fa-google fa-2x" aria-hidden="true"></i>
+                        </a>
+                        <a href="">
+                            <i class="fa fa-instagram fa-2x" aria-hidden="true"></i>
+                        </a>
+                        <a href="">
+                            <i class="fa fa-linkedin-square fa-2x" aria-hidden="true"></i>
+                        </a>
+                  </div>
+              </form>
+            </div>
+            <div class="modal-footer">
+                <a href="#">Quên mật khẩu</a>
+                <a href="#" onclick="turnOnModalRegister()">Tạo tài khoản mới</a>
+            </div>
+          </div>
         </div>
-    </div>
+      </div>
 
-    <div class="modal fade" id="register" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <p style="font-size: 20px;" class="modal-title">Đăng kí</p>
-                    <button type="button" class="btn-close" data-mdb-dismiss="modal" aria-label="Close"></button>
-                </div>
-                <div class="modal-body">
-                    <form id="register">
-                        <div class="mb-4">
-                            <label for="role" class="form-label select-label">Bạn là: </label>
-                            <select name="role" id="role" form="register" class="form-select">
-                                <option value="OWNER">Người đặt</option>
-                                <option value="PLAYER">Chủ sân</option>
-                            </select>
-                        </div>
-                        <!-- Email input -->
-                        <div class="mb-4">
-                            <label class="form-label" for="email">Số điện thoại hoặc Email</label>
-                            <input type="email" id="email" class="form-control" />
-                        </div>
-                        <!-- Password input -->
-                        <div class="mb-4">
-                            <label class="form-label" for="password">Mật khẩu</label>
-                            <input type="password" id="password" class="form-control " />
-                        </div>
-                        <!-- Submit button -->
-                        <button type="submit" class="btn btn-primary btn-block mb-4">Đăng kí</button>
-                    </form>
-                </div>
+      <div class="modal fade " id="register" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title">Đăng ký</h5>
+              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
+            <div class="modal-body">
+              <form action="{% url 'register' %}" method="POST">
+                  {% csrf_token %}
+                  <div class="inputs">
+                    <div class="mb-3">
+                        <select class="form-select" name="role">
+                            <option selected value="player">Người đặt</option>
+                            <option value="owner">Chủ sân</option>
+                          </select>
+                        <div id="emailHelp" class="form-text">Tiếp tục ĐM các bạn</div>
+                      </div>
+                    <div class="mb-3">
+                        <label for="exampleInputEmail1" class="form-label">Email hoặc số điện thoại</label>
+                        <input type="email" class="form-control" name="email" aria-describedby="emailHelp">
+                        <div id="emailHelp" class="form-text">ĐM các bạn</div>
+                      </div>
+                      <div class="mb-3">
+                        <label for="exampleInputPassword1" class="form-label">Mật khẩu</label>
+                        <input type="password" name="password" class="form-control" id="exampleInputPassword1">
+                      </div>
+                  </div>
+                  <button type="submit" class="btn btn-primary">Đăng ký</button>
+                  <p>Hoặc đăng nhập với: </p>
+                  <div class="social-login">
+                        <a href="#">
+                            <i class="fa fa-facebook-official fa-2x" aria-hidden="true"></i>
+                        </a>
+                        <a href="">
+                            <i class="fa fa-google fa-2x" aria-hidden="true"></i>
+                        </a>
+                        <a href="">
+                            <i class="fa fa-instagram fa-2x" aria-hidden="true"></i>
+                        </a>
+                        <a href="">
+                            <i class="fa fa-linkedin-square fa-2x" aria-hidden="true"></i>
+                        </a>
+                  </div>
+              </form>
+            </div>
+          </div>
         </div>
-    </div>
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.3.0/mdb.min.js "></script>
+      </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
     <script src="{% static 'js/base.js' %}" type="text/javascript"></script>
-    {%block content%} {% endblock %}
+
 </body>
 
 </html>
