--- a/stadium/book_stadium/templates/book_stadium/base.html
+++ b/stadium/book_stadium/templates/book_stadium/base.html
@@ -14,6 +14,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="{% static 'css/base.css' %}">
+    {% block css %}
+    {% endblock %}
     <title>Document</title>
 </head>
 
@@ -26,8 +28,21 @@
                     <a href="#">Đạt sân ngay</a>
                     <a href="#">Tìm sân</a>
                     {% if user.is_authenticated %}
-                        <a href="">{{user.username}}</a>
-                        <a href="{% url 'logout' %}">Đăng xuất</a>
+                    <div class="btn-group">
+                      <a class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        {{user.username}}
+                      </a>
+                      <div class="dropdown-menu dropdown-menu-right">
+                        <a href="#" class="dropdown-item" type="button">Thông tin tài khoản</a>
+                        {% if user.role == "owner" %}
+                        <a href="#" class="dropdown-item" type="button">Sân bóng của tôi</a>
+                        <a href="#" class="dropdown-item" type="button">Trạng thái đặt sân</a>
+                        {% else %}
+                        <a href="#" class="dropdown-item" type="button">Lịch sử đặt sân</a>
+                        {% endif %}
+                        <a class="dropdown-item" href="{% url 'logout' %}">Đăng xuất</a>
+                      </div>
+                    </div>
                     {% else %}
                         <button type="button" class="btn btn-primary" onclick="turnOnModalLogin()" >Đăng nhập</button>
                     {% endif %}
@@ -35,16 +50,36 @@
             </nav>
         </header>
         <section>
-            <div id="mySidenav" class="sidenav">
-                <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-                <a href="#">About</a>
-                <a href="#">Services</a>
-                <a href="#">Clients</a>
-                <a href="#">Contact</a>
+          {% if user.role == "owner" %}
+          <div class="col-2">
+            <div class="sidenav">
+              <button class="dropdown-btn slideIn">
+                Quản lý sân
+                <i class="fa fa-caret-down"></i>
+              </button>
+              <div class="dropdown-container">
+                {% for i in fields %}
+                  <a href="{% url 'stadium_detail' i.id %}">{{i.name}}</a>
+                {% endfor %}
+                <a href="{% url 'create_stadium' %}">Thêm sân</a>
               </div>
-              <span style="font-size:25px;cursor:pointer" onclick="openNav()">&#9776</span>
+              <button class="dropdown-btn slideIn">
+                Trạng thái sân
+                <i class="fa fa-caret-down"></i>
+              </button>
+              <div class="dropdown-container">
+                {% for i in fields %}
+                  <a href="#">{{i.name}}</a>
+                {% endfor %}
+              </div>
+            </div>
+          </div>
+          {% endif %}
+            <div class="col">
               {%block content%} 
               {% endblock %}
+            </div>
+
         </section>
     </div>
 
@@ -144,9 +179,13 @@
           </div>
         </div>
       </div>
+      <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+      <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
     <script src="{% static 'js/base.js' %}" type="text/javascript"></script>
-
+    {% block javascript %}
+    {% endblock %}
 </body>
 
 </html>
