--- a/stadium/static/css/base.css
+++ b/stadium/static/css/base.css
@@ -1,3 +1,7 @@
+body{
+  width: 100%;
+}
+
 .navbar img {
   width: 60px;
 }
@@ -59,45 +63,68 @@ form {
   margin-right: 5px;
 }
 
+section{
+  display: flex;
+}
+/* Fixed sidenav, full height */
 .sidenav {
-  height: 100%;
-  width: 0;
-  position: fixed;
+  height: 100vh;
+  width: 200px;
   z-index: 1;
   top: 0;
   left: 0;
-  background-color: #111;
+  /* background-color: #111; */
   overflow-x: hidden;
-  transition: 0.5s;
-  padding-top: 60px;
+  padding-top: 20px;
 }
 
-.sidenav a {
-  padding: 8px 8px 8px 32px;
+/* Style the sidenav links and the dropdown button */
+.sidenav a, .dropdown-btn {
+  padding: 6px 8px 6px 16px;
   text-decoration: none;
-  font-size: 25px;
+  font-size: 20px;
   color: #818181;
   display: block;
-  transition: 0.3s;
+  border: none;
+  background: none;
+  width:100%;
+  text-align: left;
+  cursor: pointer;
+  outline: none;
 }
 
-.sidenav a:hover {
-  color: #f1f1f1;
+/* On mouse-over */
+.sidenav a:hover, .dropdown-btn:hover {
+  color: black;
 }
 
-.sidenav .closebtn {
-  position: absolute;
-  top: 0;
-  right: 25px;
-  font-size: 36px;
-  margin-left: 50px;
+/* Main content */
+.main {
+  margin-left: 200px; /* Same as the width of the sidenav */
+  font-size: 20px; /* Increased text to enable scrolling */
+  padding: 0px 10px;
 }
 
-@media screen and (max-height: 450px) {
-  .sidenav {
-    padding-top: 15px;
-  }
-  .sidenav a {
-    font-size: 18px;
-  }
+/* Add an active class to the active dropdown button */
+.active {
+  /* background-color: green; */
+  /* color: white; */
+}
+
+/* Dropdown container (hidden by default). Optional: add a lighter background color and some left padding to change the design of the dropdown content */
+.dropdown-container {
+  display: none;
+  /* background-color: #262626; */
+  padding-left: 8px;
+}
+
+/* Optional: Style the caret down icon */
+.fa-caret-down {
+  float: right;
+  padding-right: 8px;
+}
+
+.fa-caret-up {
+  float: right;
+  padding-right: 8px;
 }
