--- a/stadium/book_stadium/templates/book_stadium/stadiumDetail.html
+++ b/stadium/book_stadium/templates/book_stadium/stadiumDetail.html
@@ -44,10 +44,12 @@
                           </tr>
                         </thead>
                         <tbody>
+                          {% for i in times_and_prices %}
                             <tr>
-                                <td></td>
-                                <td></td>
+                                <td>{{i.time_frame}}</td>
+                                <td>{{i.price}}</td>
                               </tr>
+                            {% endfor %}
                           </tbody>
                           </table>
                           <input type="submit" value="Lưu khung giờ" class="btn btn-primary mt-4 mb-5"> 
