--- a/stadium/book_stadium/templates/book_stadium/createStadium.html
+++ b/stadium/book_stadium/templates/book_stadium/createStadium.html
@@ -20,7 +20,7 @@
                 <label for="exampleFormControlInput1">Số lượng có thể đặt</label>
                 <input name="field_count" type="number" class="form-control" id="exampleFormControlInput1">
               </div>
-            <input type="submit" value="Thêm" class="btn btn-success mt-4"> 
+            <input type="submit" value="Thêm" class="btn btn-primary mt-4"> 
           </form>
 
     </div>
