--- a/stadium/book_stadium/templates/book_stadium/stadiumDetail.html
+++ b/stadium/book_stadium/templates/book_stadium/stadiumDetail.html
@@ -1,5 +1,6 @@
 {% extends 'book_stadium/base.html' %}
 {% load static %}
+{% load humanize %}
 {% block css %}
 <link rel="stylesheet" href="{% static 'css/stadiumDetail.css' %}">
 {% endblock %}
@@ -10,52 +11,68 @@
                 <h2>
                     Thông tin chung
                 </h2>
-                <form action="#" method="post">
-                    {% csrf_token %}
-                <div class="form-group pt-4">
-                  <label for="exampleFormControlInput1" class="text-left">Tên sân</label>
-                  <h3 for="">{{ stadium.name }}</h3>
-                  <!-- <input name="name" type="text" class="form-control" id="exampleFormControlInput1" value=""> -->
-                </div>
-                <div class="form-group pt-4">
-                    <label for="exampleFormControlInput1">Địa chỉ</label>
-                    <!-- <input name="address" type="text" class="form-control" id="exampleFormControlInput1"> -->
-                    <h3 for="">{{ stadium.address }}</h3>
+                <form action="{% url 'stadium_detail' stadium.id %}" method="POST" class="stadium-form-detail">
+                  {% csrf_token %}
+                  <div class="form-group mt-4">
+                    <label for="exampleInputEmail1">Tên sân: </label>
+                    <div class="inputField">
+                      <input type="text" class="form-control" id="name" name="name" disabled="true" value="{{stadium.name}}">
+                      <i data-name="name" class="fas fa-pen-square"></i>
+                    </div>
+                    
                   </div>
-                  <div class="form-group pt-4">
-                    <label for="exampleFormControlInput1">Số lượng có thể đặt</label>
-                    <!-- <input name="field_count" type="number" class="form-control" id="exampleFormControlInput1"> -->
-                    <h3>{{ stadium.field_count }}</h3>
+
+                  <div class="form-group mt-4">
+                      <label for="exampleInputEmail1">Địa chỉ: </label>
+                      <div class="inputField">
+                        <input type="text" class="form-control" id="address" name="address" disabled="true" value="{{stadium.address}}">
+                        <i data-name="address" class="fas fa-pen-square"></i>
+                      </div>
                   </div>
-                <input type="submit" value="Lưu thông tin" class="btn btn-primary mt-4"> 
-              </form>
+
+                  <div class="form-group mt-4">
+                      <label for="exampleInputEmail1">Số sân có thể đặt: </label>
+                      <div class="inputField">
+                        <input type="text" class="form-control" id="field-count" name="field_count" disabled="true" value="{{stadium.field_count}}">
+                        <i data-name="field-count" class="fas fa-pen-square"></i>
+                      </div>
+                  </div>
+          
+                  <button type="submit" id="saveDetailBtn" class="btn btn-primary mt-5" disabled="true">Lưu thông tin</button>
+                </form>
             </div>
             <div class="form-timeframe">
                 <h2>
                     Các khung giờ
                 </h2>
-                <form action="#" method="post">
+                <form action="#" method="post" class="stadium-form-time-frames">
                     {% csrf_token %}
                     <table class="table">
                         <thead class="thead-dark">
                           <tr>
-                            <th scope="col">Khung giờ</th>
-                            <th scope="col">Giá tiền</th>
+                            <th>Khung giờ</th>
+                            <th class="col-2">Giá tiền</th>
                           </tr>
                         </thead>
                         <tbody>
                           {% for i in times_and_prices %}
                             <tr>
                                 <td>{{i.time_frame}}</td>
-                                <td>{{i.price}}</td>
+                                <td>
+                                  <div class="inputField text-center">
+                                    <input type="text" class="form-control" id="{{forloop.counter0}}" disabled="true" value="{{ i.price|intcomma }}">
+                                    <i data-name="{{ forloop.counter0 }}" class="fas fa-pen-square"></i>
+                                  </div>
+                                </td>
+                                
                               </tr>
                             {% endfor %}
                           </tbody>
                           </table>
-                          <input type="submit" value="Lưu khung giờ" class="btn btn-primary mt-4 mb-5"> 
+                          <button type="submit" id="saveTimeFramesBtn" class="btn btn-primary mt-5" disabled="true">Lưu khung giờ</button>
               </form>
             </div>
-          
+
     </div>
 {% endblock %}
 {% block javascript %}
