--- a/stadium/static/css/base.css
+++ b/stadium/static/css/base.css
@@ -4,16 +4,31 @@ body{
 
 .navbar img {
   width: 60px;
+  
 }
 
 .navbar {
+  border: 1px solid black;
+  background-color: #0d6efd;
+
 }
-.menu {
+
+.navbar ul {
   display: flex;
+  align-items: center;
 }
+
+.navbar ul li {
+  list-style: none;
+}
+
+/* .menu {
+  display: flex;
+} */
+
 .navbar a {
   text-decoration: none;
-  color: black;
+  color: white;
   margin-right: 20px;
 }
 
@@ -29,10 +44,9 @@ body{
 }
 a {
   text-decoration: none;
-  color: black;
 }
 a:hover {
-  color: blue;
+  color: black;
 }
 img {
   width: 40px;
@@ -65,6 +79,12 @@ form {
 
 section{
   display: flex;
+  border: 1px solid black;
+  height: auto;
+}
+
+.sidebar {
+  border-right: 1px solid black;
 }
 /* Fixed sidenav, full height */
 .sidenav {
@@ -127,4 +147,12 @@ section{
 .fa-caret-up {
   float: right;
   padding-right: 8px;
+}
+
+.dropdown-menu a {
+  color: black;
+}
+
+.col {
+  display: flex;
 }
