using form.py, handle logic of login(email or phone number)

--- a/stadium/book_stadium/templates/book_stadium/base.html
+++ b/stadium/book_stadium/templates/book_stadium/base.html
@@ -121,7 +121,7 @@
                   <div class="inputs">
                     <div class="mb-3">
                         <label for="exampleInputEmail1" class="form-label">Email hoặc số điện thoại</label>
-                        <input type="email" class="form-control" name="email" aria-describedby="emailHelp">
+                        <input type="text" class="form-control" name="email" aria-describedby="emailHelp">
                         <div id="emailHelp" class="form-text">ĐM các bạn</div>
                       </div>
                       <div class="mb-3">
