--- a/stadium/book_stadium/templates/book_stadium/base.html
+++ b/stadium/book_stadium/templates/book_stadium/base.html
@@ -1,54 +1,55 @@
 {% load static %}
-
+{% load crispy_forms_tags %}
 <!DOCTYPE html>
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- Font Awesome -->
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" rel="stylesheet" />
-    <!-- Google Fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="{% static 'css/base.css' %}">
-    {% block css %}
-    {% endblock %}
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- Font Awesome -->
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" rel="stylesheet" />
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="{% static 'css/base.css' %}">
+  {% block css %}
+  {% endblock %}
+  <title>Document</title>
 </head>
 
 <body>
-    <div class="container">
-        <header>
-            <nav class="navbar">
-              <img class='logo' src="https://varunit.com/wp-content/uploads/2018/09/varunit-logo-square-black-bg.png" alt="">
-              <ul>
-                <li><a href="#">Đặt sân ngay</a></li>
-                <li><a href="#">Tìm sân</a></li>
-                {% if user.is_authenticated %}
-                <li>
-                  <a class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    {{user.username}}
-                  </a>  
-                     <div class="dropdown-menu dropdown-menu-right">
-                        <a href="#" class="dropdown-item" type="button">Thông tin tài khoản</a>
-                        {% if user.role == "owner" %}
-                        <a href="#" class="dropdown-item" type="button">Sân bóng của tôi</a>
-                        <a href="#" class="dropdown-item" type="button">Trạng thái đặt sân</a>
-                        {% else %}
-                        <a href="#" class="dropdown-item" type="button">Lịch sử đặt sân</a>
-                        {% endif %}
-                        <a class="dropdown-item" href="{% url 'logout' %}">Đăng xuất</a>
-                      </div>
-                  
-                </li>
-                {% else %}
-                        <li><button type="button" class="btn btn-primary" onclick="turnOnModalLogin()" >Đăng nhập</button></li>
-                {% endif %}
-              </ul>
-                <!-- <img class='logo' src="https://varunit.com/wp-content/uploads/2018/09/varunit-logo-square-black-bg.png" alt="">
+  <div class="container">
+    <header>
+      <nav class="navbar">
+        <img class='logo' src="https://varunit.com/wp-content/uploads/2018/09/varunit-logo-square-black-bg.png" alt="">
+        <ul>
+          <li><a href="#">Đặt sân ngay</a></li>
+          <li><a href="#">Tìm sân</a></li>
+          {% if user.is_authenticated %}
+          <li>
+            <a class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              {{user.username}}
+            </a>
+            <div class="dropdown-menu dropdown-menu-right">
+              <a href="#" class="dropdown-item" type="button">Thông tin tài khoản</a>
+              {% if user.role == "owner" %}
+              <a href="#" class="dropdown-item" type="button">Sân bóng của tôi</a>
+              <a href="#" class="dropdown-item" type="button">Trạng thái đặt sân</a>
+              {% else %}
+              <a href="#" class="dropdown-item" type="button">Lịch sử đặt sân</a>
+              {% endif %}
+              <a class="dropdown-item" href="{% url 'logout' %}">Đăng xuất</a>
+            </div>
+
+          </li>
+          {% else %}
+          <li><button type="button" class="btn btn-primary" onclick="turnOnModalLogin()">Đăng nhập</button></li>
+          {% endif %}
+        </ul>
+        <!-- <img class='logo' src="https://varunit.com/wp-content/uploads/2018/09/varunit-logo-square-black-bg.png" alt="">
                 <div class="menu">
                     <a href="#">Đặt sân ngay</a>
                     <a href="#">Tìm sân</a>
@@ -72,100 +73,125 @@
                         <button type="button" class="btn btn-primary" onclick="turnOnModalLogin()" >Đăng nhập</button>
                     {% endif %}
                 </div> -->
-            </nav>
-        </header>
-        <section>
-          {% if user.role == "owner" %}
-          <div class="col-2 sidebar">
-            <div class="sidenav">
-              <button class="dropdown-btn slideIn">
-                Quản lý sân
-                <i class="fa fa-caret-down"></i>
-              </button>
-              <div class="dropdown-container">
-                {% for field in fields %}
-                  <a href="{% url 'stadium_detail' field.id %}">{{field.name}}</a>
-                {% endfor %}
-                <a href="{% url 'create_stadium' %}">Thêm sân</a>
-              </div>
-              <button class="dropdown-btn slideIn">
-                Trạng thái sân
-                <i class="fa fa-caret-down"></i>
-              </button>
-              <div class="dropdown-container">
-                {% for field in fields %}
-                  <a href="#">{{field.name}}</a>
-                {% endfor %}
-              </div>
-            </div>
+      </nav>
+    </header>
+    <section>
+      {% if user.role == "owner" %}
+      <div class="col-2 sidebar">
+        <div class="sidenav">
+          <button class="dropdown-btn slideIn">
+            Quản lý sân
+            <i class="fa fa-caret-down"></i>
+          </button>
+          <div class="dropdown-container" style="display: block;">
+            {% for field in fields %}
+            <a class=" " href="{% url 'stadium_detail' field.id %}">{{field.name}}</a>
+            {% endfor %}
+            <a class=" " href="{% url 'create_stadium' %}">Thêm sân</a>
           </div>
-          {% endif %}
-            <div class="col">
-              {%block content%} 
-              {% endblock %}
-            </div>
-
-        </section>
-    </div>
-
-    <div class="modal fade " id="login" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
-        <div class="modal-dialog modal-dialog-centered">
-          <div class="modal-content">
-            <div class="modal-header">
-              <h5 class="modal-title" id="staticBackdropLabel">Đăng nhập</h5>
-              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-            </div>
-            <div class="modal-body">
-              <form action="{% url 'login' %}" method="POST">
-                  {% csrf_token %}
-                  <div class="inputs">
-                    <div class="mb-3">
-                        <label for="exampleInputEmail1" class="form-label">Email hoặc số điện thoại</label>
-                        <input type="text" class="form-control" name="email" aria-describedby="emailHelp">
-                        <div id="emailHelp" class="form-text">ĐM các bạn</div>
-                      </div>
-                      <div class="mb-3">
-                        <label for="exampleInputPassword1" class="form-label">Mật khẩu</label>
-                        <input type="password" name="password" class="form-control" id="exampleInputPassword1">
-                      </div>
-                  </div>
-                  <button type="submit" class="btn btn-primary">Đăng nhập</button>
-                  <p>Hoặc đăng nhập với: </p>
-                  <div class="social-login">
-                        <a href="#">
-                            <i class="fa fa-facebook-official fa-2x" aria-hidden="true"></i>
-                        </a>
-                        <a href="">
-                            <i class="fa fa-google fa-2x" aria-hidden="true"></i>
-                        </a>
-                        <a href="">
-                            <i class="fa fa-instagram fa-2x" aria-hidden="true"></i>
-                        </a>
-                        <a href="">
-                            <i class="fa fa-linkedin-square fa-2x" aria-hidden="true"></i>
-                        </a>
-                  </div>
-              </form>
-            </div>
-            <div class="modal-footer">
-                <a href="#">Quên mật khẩu</a>
-                <a href="#" onclick="turnOnModalRegister()">Tạo tài khoản mới</a>
-            </div>
+          <button class="dropdown-btn slideIn">
+            Trạng thái sân
+            <i class="fa fa-caret-down"></i>
+          </button>
+          <div class="dropdown-container" style="display: block;">
+            {% for field in fields %}
+            <a class=" " href="#">{{field.name}}</a>
+            {% endfor %}
           </div>
         </div>
       </div>
+      {% endif %}
+      <div class="col">
+        {%block content%}
+        {% endblock %}
+      </div>
 
-      <div class="modal fade " id="register" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
-        <div class="modal-dialog modal-dialog-centered">
-          <div class="modal-content">
-            <div class="modal-header">
-              <h5 class="modal-title">Đăng ký</h5>
-              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+    </section>
+  </div>
+
+  <div class="modal fade " id="login" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
+    aria-labelledby="staticBackdropLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="staticBackdropLabel">Đăng nhập</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          <form action="{% url 'login' %}" method="POST">
+            {% csrf_token %}
+            <div class="inputs">
+              <div class="mb-3">
+                <label for="exampleInputEmail1" class="form-label">Email hoặc số điện thoại</label>
+                <input type="text" class="form-control" name="email" aria-describedby="emailHelp">
+                <div id="emailHelp" class="form-text">ĐM các bạn</div>
+              </div>
+              <div class="mb-3">
+                <label for="exampleInputPassword1" class="form-label">Mật khẩu</label>
+                <input type="password" name="password" class="form-control" id="exampleInputPassword1">
+              </div>
             </div>
-            <div class="modal-body">
-              <form action="{% url 'register' %}" method="POST">
-                  {% csrf_token %}
-                  <div class="inputs">
+            <button type="submit" class="btn btn-primary">Đăng nhập</button>
+            <p>Hoặc đăng nhập với: </p>
+            <div class="social-login">
+              <a href="#">
+                <i class="fa fa-facebook-official fa-2x" aria-hidden="true"></i>
+              </a>
+              <a href="">
+                <i class="fa fa-google fa-2x" aria-hidden="true"></i>
+              </a>
+              <a href="">
+                <i class="fa fa-instagram fa-2x" aria-hidden="true"></i>
+              </a>
+              <a href="">
+                <i class="fa fa-linkedin-square fa-2x" aria-hidden="true"></i>
+              </a>
+            </div>
+          </form>
+        </div>
+        <div class="modal-footer">
+          <a href="#">Quên mật khẩu</a>
+          <a href="#" onclick="turnOnModalRegister()">Tạo tài khoản mới</a>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="modal fade " id="register" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
+    aria-labelledby="staticBackdropLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title">Đăng ký</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          <form action="{% url 'register' %}" method="POST">
+            {% csrf_token %}
+            {%for i in register_form%}
+            <div class="inputs">
+              <div class="mb-3">
+                {{i|as_crispy_field }}
+              </div>
+              {% endfor %}
+              <div class="social-login text-center">
+                <button type="submit" class="btn btn-primary">Đăng ký</button>
+                <p>Hoặc đăng nhập với: </p>
+                <a href="#" class="text-center">
+                  <i class="fa fa-facebook-official fa-2x" aria-hidden="true"></i>
+                </a>
+                <a href="" class="text-center">
+                  <i class="fa fa-google fa-2x" aria-hidden="true"></i>
+                </a>
+                <a href="" class="text-center">
+                  <i class="fa fa-instagram fa-2x" aria-hidden="true"></i>
+                </a>
+                <a href="" class="text-center">
+                  <i class="fa fa-linkedin-square fa-2x" aria-hidden="true"></i>
+                </a>
+              </div>
+            </div>
+            <!-- 
                     <div class="mb-3">
                         <select class="form-select" name="role">
                             <option selected value="player">Người đặt</option>
@@ -198,19 +224,27 @@
                         <a href="">
                             <i class="fa fa-linkedin-square fa-2x" aria-hidden="true"></i>
                         </a>
-                  </div>
-              </form>
-            </div>
-          </div>
+                  </div> -->
+          </form>
         </div>
       </div>
-      <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-      <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-      <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
-    <script src="{% static 'js/base.js' %}" type="text/javascript"></script>
-    {% block javascript %}
-    {% endblock %}
+    </div>
+  </div>
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+    integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+    crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+    integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+    crossorigin="anonymous"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+    integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0"
+    crossorigin="anonymous"></script>
+  <script src="{% static 'js/base.js' %}" type="text/javascript"></script>
+  {% block javascript %}
+  {% endblock %}
 </body>
 
 </html>
