--- a/stadium/static/css/base.css
+++ b/stadium/static/css/base.css
@@ -4,7 +4,7 @@ body{
 
 .navbar img {
   width: 60px;
-  
+
 }
 
 .navbar {
@@ -149,6 +149,9 @@ section{
 
 .col {
   display: flex;
-  
+
 }
 
+.field-name:hover {
+    background: #0d6efd;
+}
