--- a/stadium/book_stadium/templates/book_stadium/userProfile.html
+++ b/stadium/book_stadium/templates/book_stadium/userProfile.html
@@ -4,6 +4,11 @@
 
 {% block content %}
 <link rel="stylesheet" href="{% static 'css/userProfile.css' %}">
+{% if user.username == '' or user.phone_number == None %}
+    <div class="alert alert-primary" role="alert">
+        Hãy nhập số điện thoại và tên của bạn để đặt sân được tiện lợi hơn
+    </div>
+{% endif %}
 <div class="content-section">
     <!-- <div class="media">
       <img class="rounded-circle account-img" src="{{ user.profile.image.url }}">
@@ -16,7 +21,7 @@
         {% csrf_token %}
         <legend class="border-bottom mb-4">Thông tin người dùng</legend>
         {{ form|crispy }}
-        <div class="form-group mt-4">
+        <div class="form-group mt-4 mb-4">
             <button class="btn btn-outline-info" type="submit">Cập nhật</button>
         </div>
     </form>
